Add `TestUtils.propertyValue()` based on generics
* Deprecate `TestUtils.getPropertyValue()` based on a `Class` param
* Optimize `TestUtils.getPropertyValue()` to not create extra `DirectFieldAccessor`
if we are at the end of the nested path
* Refactor project code to use a new `TestUtils.propertyValue()`
* Remove unnecessary now `@SuppressWarnings("unchecked")` from those tests
* Some other code clean up in affected test classes